# EventDetector

./: .gitignore  README.md
EventDetector/: CMakeCache.txt  CMakeLists.txt  EventDetector.cpp  Makefile  cmake_install.cmake  fft_window.cpp  mel_basis.cpp  model.h  preprocessing.cpp  preprocessing.h  test_audio2.cpp  test_audio2.h  wavread.cpp  weights.h
EventDetector/alsa/: Makefile
EventDetector/alsa/sound/: Makefile
EventDetector/include/: EventDetector.h  File.h  TestLocalFile.h  feature_aggregator.h  feature_normalizer.h  get_mel_basis.h  get_window.h  parameters.h  postprocessing.h  wavread.h
EventDetector/src/: File.cpp  TestLocalFile.cpp  feature_aggregator.cpp  feature_normalizer.cpp  main.cpp  model.cpp  postprocessing.cpp  weights.cpp
